# fastmath

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fastmath.py  pyproject.toml
.github/workflows/: ci.yml
