[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmath-cli"
version = "2.0.0"
description = "A terminal-based math practice game that adapts to your skill level"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "michaelkrauty"}
]
keywords = ["math", "education", "terminal", "game", "practice", "arithmetic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "blessed>=1.20",
    "platformdirs>=3.0",
]

[project.scripts]
fastmath = "fastmath:main"

[project.urls]
Homepage = "https://github.com/michaelkrauty/fastmath"
Repository = "https://github.com/michaelkrauty/fastmath"
Issues = "https://github.com/michaelkrauty/fastmath/issues"
